--- a/config_sample.env
+++ b/config_sample.env
@@ -1,9 +1,6 @@
-# REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-CHAT_ID = ""
-DELAY = "600" # 10 minutes
-DATABASE_URL = ""
-
-# OPTIONAL CONFIG
-CUSTOM_MESSAGES = ""
+BOT_TOKEN = "" # tg bok token ofc
+OWNER_ID =  # who manage all things
+CHAT_ID = "" # channal id
+DELAY = 600 # The delay between each feed request. (set 600)
+CUSTOM_MESSAGES = "" # To display a custom message at the top of every new feed.
+DATABASE_URL = "" # heroku-postgresql database url
